tests/ui/macros/macro-path-prelude-fail-2.rs
mod m {
    fn check() {
        Result::Ok!(); //~ ERROR cannot find macro `Ok`
    }
}

fn main() {}
